--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
-    "dotenv": "^16.3.1",
     "mui": "^0.0.1",
     "node-sass": "^9.0.0",
     "radio-browser-api": "^6.0.1",
@@ -26,7 +25,9 @@
     "react-router-dom": "^6.11.2",
     "react-scripts": "^2.1.3",
     "sass": "^1.63.4",
-    "web-vitals": "^2.1.4"
+    "video-react": "^0.16.0",
+    "web-vitals": "^2.1.4",
+    "zod": "^3.21.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
