--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "dayjs": "^1.11.9",
     "mui": "^0.0.1",
     "node-sass": "^9.0.0",
     "radio-browser-api": "^6.0.1",
